# DIABERT_test_code_lib

./: .gitignore  DIABERT-TimsTOF_20250710-原版.ipynb  DIABERT-TimsTOF_20250710-重要的python切片流程代码.ipynb  README.md  comparison_report.json  report_diann_transition_group_id.txt  report_diann_transition_group_id_quoted.txt  transform_txt_with_quotes.py
0628_参考/: im_rt.py
20250630_read_bruker_data/: Cargo.toml  compare_results.py  comparison_report.txt  csv_comparison_report.txt  python_processor.py  python_wrapper.py  requirements-lock.txt  run.sh  setup_conda_env.sh  setup_env.sh
20250630_read_bruker_data/python/: process_diann.py
20250630_read_bruker_data/read_brucker_data_pyo3-失败/: Cargo.toml
20250630_read_bruker_data/read_brucker_data_pyo3-失败/src/: main.rs  python_integration.rs  python_simple.rs
20250630_read_bruker_data/src/: main.rs  python_integration.rs
20250711/rust_comparison_results/: compare_versions.py
20250711/timstof/: Cargo.toml
20250711/timstof/prompts/: 搭建.txt
20250711/timstof/src/: main-old.rs  main.rs  main13-老版本全流程.rs  python-ground-truth.py  utils.rs
20250711/timstof/对比前后rust差异/: main5-6-实现后输出每一步的结果验证一致性版本.rs
20250711/重要python/: comparison_report_20250707_171633.txt  timstof_PASEF_20250506.py  单独plotrust版本的finalintensity.py  原始ipynb文件粘贴为py文件.py  对比rust和python结果.py  检查maskMatrix的python和Rust一致性.py  第二部分-单线程重构版-完整版-下游继续-测速版本.py  第二部分-单线程重构版-完整版-下游继续.py  第二部分-单线程重构版-完整版.py
20250712/comparison_results/: compare_results.py
20250712/timstof/: Cargo.toml
20250712/重要python/: Untitled_im_rt_test.ipynb  分析timsrust和alphatims输出precursor_result相似度.py  单独plotrust版本的finalintensity.py  检查python和rust的pre和frag_result的mz_value排序去重后差异.py  第二部分-单线程重构版-完整版-下游继续-测速版本.py  读取原始数据并打印统计结果.py
20250714/timstof-slice-optimize/: Cargo.toml
20250716/: 使用说明.md
20250716/timstof/: Cargo.toml
DIABERT_test_code_lib 2/3D_code/: utils.py  (+3 more)
DIA处理原理-笔记/: DIA-BERT_manual-v1.1.docx  DIA-NN-llm解读每一段.md  TimsTOF-代码-初步理解.md
helper/: build_lib_matrix学习.ipynb  ipynb文件合并为py文件.py
timsrust-matrix-reduction/: Cargo.toml
timsrust解析时间优化/timsrust-optimize/: Cargo.toml
timsrust解析时间优化/timsrust-optimize/src/: main.rs
timstof_to_df/: test.ipynb  test.py
(+36 files in other folders)
