[package]
name = "read_bruker_data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "read_bruker_data"
path = "src/main.rs"

[[bin]]
name = "compare"
path = "src/bin/compare.rs"

[dependencies]
timsrust = "0.4.2"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.0"
rayon = "1.8"
chrono = "0.4"
# Add PyO3 dependencies
pyo3 = { version = "0.22", features = ["auto-initialize"] }
numpy = "0.22"  # For NumPy array support

[profile.release]
lto = true
codegen-units = 1