[package]
name = "read_bruker_data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "read_bruker_data"
path = "src/main.rs"

[dependencies]
timsrust = "0.4.2"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
rayon = "1.8"
chrono = "0.4"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
numpy = "0.20"
polars = { version = "0.37", features = ["lazy", "parquet", "csv", "strings", "temporal", "regex"] }
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
# 新增绘图库
plotters = "0.3"
plotters-backend = "0.3"

[profile.release]
lto = true
codegen-units = 1